<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/main_background"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:paddingBottom="40dp"
        android:text="@string/select_lesson"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_lesson_2_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lesson_2_3"
        android:background="@drawable/button_stroke_white_blue_pressed"
        android:padding="20dp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/button_lesson_2_2" />



    <Button
        android:id="@+id/button_lesson_2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:background="@drawable/button_stroke_white_blue_pressed"
        android:text="@string/lesson_2_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/button_lesson_2_1" />

    <Button
        android:id="@+id/button_lesson_2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:background="@drawable/button_stroke_white_blue_pressed"
        android:text="@string/lesson_2_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
    android:id="@+id/coding_challenge2_1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:text="@string/coding_challenge_2_1"
    android:background="@drawable/button_stroke_white_blue_pressed"
    android:padding="20dp"
    android:layout_margin="20dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:textAllCaps="false"
    app:layout_constraintTop_toBottomOf="@+id/button_lesson_2_3" />

    <Button
        android:id="@+id/lesson_2_1_hw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lesson_2_1_hw"
        android:background="@drawable/button_stroke_white_blue_pressed"
        android:padding="20dp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/coding_challenge2_1" />

    <Button
        android:id="@+id/lesson_2_2_hw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_stroke_white_blue_pressed"
        android:padding="20dp"
        android:text="@string/lesson_2_2_hw"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lesson_2_1_hw" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />
</androidx.constraintlayout.widget.ConstraintLayout>