<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".unit1.Lesson2">


    <Button
        android:id="@+id/button_toast"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/purple_700"
        android:text="@string/button_label_toast"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/show_count"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_count"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/purple_700"
        android:text="@string/button_label_count"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/show_count"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_back" />

    <TextView
        android:id="@+id/show_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:background="@color/yellow"
        android:gravity="center"
        android:text="@string/count_value"
        android:textColor="@color/purple_500"
        android:textSize="160sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@color/purple_700"
        android:text="@string/back"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/show_count"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_toast" />


</androidx.constraintlayout.widget.ConstraintLayout>