<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/main_background"
        tools:context=".unit2.Homework21">


    <Button
        android:id="@+id/button_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/purple_700"
        android:text="@string/hello"
        android:onClick="sayHello"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/show_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_hello"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:background="@color/yellow"
        android:gravity="center"
        android:text="@string/count_value"
        android:textColor="@color/purple_500"
        android:textSize="160sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.383" />

    <Button
        android:id="@+id/button_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_count"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/purple_700"
        android:text="@string/button_label_count"
        android:textColor="@color/black" />

    </RelativeLayout>