<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".unit2.CodingChallengeLesson1">

    <Button
        android:id="@+id/back"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />


    <Button
        android:id="@+id/button_1"
        android:layout_width="277dp"
        android:layout_height="100dp"
        android:layout_marginTop="148dp"
        android:background="@drawable/button_stroke_white_blue_pressed"
        android:text="@string/text_1"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:onClick="openTextOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="277dp"
        android:layout_height="100dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/button_stroke_white_blue_pressed"
        android:text="@string/text_2"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:onClick="openTextTwo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1"
        app:layout_constraintVertical_bias="0.193" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="277dp"
        android:layout_height="100dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/button_stroke_white_blue_pressed"
        android:text="@string/text_3"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:onClick="openTextThree"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_2"
        app:layout_constraintVertical_bias="0.385" />

</androidx.constraintlayout.widget.ConstraintLayout>